--- a/assets/scss/utils/_base.scss
+++ b/assets/scss/utils/_base.scss
@@ -17,3 +17,7 @@ body {
   overflow-y: scroll;
   overflow-x: auto;
 }
+
+.nowrap {
+  white-space: nowrap;
+}
