--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -4,3 +4,5 @@ $spacing-tiny: rem-calc(5);
 $spacing-small: rem-calc(10);
 $spacing-medium: rem-calc(15);
 $spacing-big: rem-calc(30);
+
+$votes-total-width: rem-calc(65);
